Fix layout issue with dissappearing serial output window

--- a/src/app/modules/blockly-editor/components/code-view/code-view.component.scss
+++ b/src/app/modules/blockly-editor/components/code-view/code-view.component.scss
@@ -1,5 +1,9 @@
 #code-view {
   width: 100%;
-  min-height: 50%;
+  height: 50%;
   margin: 0;
+}
+
+.language-arduino{
+  height: auto;
 }
